--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev app.ts",
+    "prod": "npx tsc app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
